--- a/slider/slider.html
+++ b/slider/slider.html
@@ -149,7 +149,7 @@
 
         <div class="list">
 
-            <div class="item" style="background-image: url(https://png.pngtree.com/thumb_back/fw800/background/20240105/pngtree-beautiful-nature-with-flowers-wallpaper-image_15572108.jpg);">
+            <div class="item" style="background-image: url(../IMG/img1.jpeg);">
                 <div class="content">
                     <div class="title">SLIDER</div>
                     <div class="name">IMAGE1</div>
