--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -18,21 +18,22 @@
     <nav>
         <div class="nav-bar">
             <i class='bx bx-menu sidebarOpen' ></i>
-            <span class="logo navLogo"><a href="#">welcome</a></span>
+            <span class="logo navLogo"><a href="#">Dream Decor</a></span>
 
             <div class="menu">
                 <div class="logo-toggle">
-                    <span class="logo"><a href="#">welcome</a></span>
+                    <span class="logo"><a href="#">Dream Decor</a></span>
                     <i class='bx bx-x siderbarClose'></i>
                 </div>
 
                 <ul class="nav-links">
                     <li><a href="#">Home</a></li>
+                    <li><a href="#">Collection</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </div>
+            
 
             <div class="darkLight-searchBox">
                 <div class="dark-light">
@@ -54,23 +55,12 @@
             </div>
         </div>
     </nav>
-    <br>
-    <br>
-    <br>
-    <div class="box">
-       <h2>hello <br>there</h2>
+    <div class="divv">
+        <img  class="imgg" src="../IMG/decor1.jpeg">
     </div>
-    <div class="box2">
-        <h2>hello <br>there</h2>
-     </div>
-     <div class="box3">
-        <h2>hello <br>there</h2>
-     </div>
-     <div class="box4">
-        <h2>hello <br>there</h2>
-     </div>
     
 
 <script src="./nav.js"></script>
+
 </body>
 </html>
