--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -57,6 +57,10 @@
     </nav>
     <div class="divv">
         <img  class="imgg" src="../IMG/decor1.jpeg">
+        <h2 class="textt">Decorate Your Dream Space<br> With Our Finest Collection</h2>
+        <p class="para">Explore our curated collections to discover the<br>perfect pieces for your unique vision </p>
+        <br>
+        <button class="buttonn">Explore Collection</button>
     </div>
     
 
