--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -61,7 +61,11 @@
         <p class="para">Explore our curated collections to discover the<br>perfect pieces for your unique vision </p>
         <br>
         <button class="buttonn">Explore Collection</button>
+        <div>
+            <h1 class="heading">Top Categories</h1>
+        </div>
     </div>
+    
     
 
 <script src="./nav.js"></script>
