--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -73,6 +73,9 @@
             <div class="imgg2">
                 <img  class="img2" src="../IMG/decor4.jpeg" alt="image">
             </div>
+            <div class="imgg3">
+                <img  class="img3" src="https://5.imimg.com/data5/SELLER/Default/2024/7/435298652/MF/SR/BJ/675516/bamboo-flower-vase-500x500.jpg" alt="image">
+            </div>
         </div>
     </div>
 
