--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -69,12 +69,15 @@
         <div>
             <div>
                 <img class="img1" src="../IMG/decor2.jpeg" alt="image">
+                <!-- <p>Glass</p> -->
             </div>
             <div class="imgg2">
                 <img  class="img2" src="../IMG/decor4.jpeg" alt="image">
+                <!-- <p>Ceramic</p> -->
             </div>
             <div class="imgg3">
-                <img  class="img3" src="https://5.imimg.com/data5/SELLER/Default/2024/7/435298652/MF/SR/BJ/675516/bamboo-flower-vase-500x500.jpg" alt="image">
+                <img  class="img3" src="../IMG/decor5.jpeg" alt="image">
+                <!-- <p>wooden</p> -->
             </div>
         </div>
     </div>
