--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -66,10 +66,10 @@
         <div>
             <h1 class="heading">Top Categories</h1>
         </div>
-        <div>
+        <div class="margin">
             <div>
                 <img class="img1" src="../IMG/decor2.jpeg" alt="image">
-                <!-- <p>Glass</p> -->
+                <!-- <p class="glass">Glass</p> -->
             </div>
             <div class="imgg2">
                 <img  class="img2" src="../IMG/decor4.jpeg" alt="image">
