--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -69,15 +69,22 @@
         <div class="margin">
             <div>
                 <img class="img1" src="../IMG/decor2.jpeg" alt="image">
-                <!-- <p class="glass">Glass</p> -->
+                    <p class="p1">Glass</p>
+                    <button class="btn1">SEE COLLECTION</button>
+                
             </div>
+
             <div class="imgg2">
-                <img  class="img2" src="../IMG/decor4.jpeg" alt="image">
-                <!-- <p>Ceramic</p> -->
+                <img class="img2" src="../IMG/decor4.jpeg" alt="image">
+                <!-- <p class="p2">Ceramic</p>
+                <button class="btn2">SEE COLLECTION</button> -->
             </div>
+
             <div class="imgg3">
-                <img  class="img3" src="../IMG/decor5.jpeg" alt="image">
-                <!-- <p>wooden</p> -->
+                <img class="img3" src="../IMG/decor5.jpeg" alt="image">
+                <!-- <p class="p3">Wooden</p>
+                <button class="btn3">SEE COLLECTION</button> -->
+
             </div>
         </div>
     </div>
