--- a/slider2/demo.html
+++ b/slider2/demo.html
@@ -43,15 +43,15 @@
 
 <body>
     <div>
-       
-    <ul class="topnav">
-    <li><a class="active" href="#home">Home</a></li>
-    <li><a href="#news">News</a></li>
-    <li><a href="#contact">Contact</a></li>
-    <li class="right"><a href="#about">About</a></li>
-  </ul>
-</div>
-  
+
+        <ul class="topnav">
+            <li><a class="active" href="#home">Home</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li class="right"><a href="#about">About</a></li>
+        </ul>
+    </div>
+
 
     <section>
         <div class="container">
@@ -113,8 +113,8 @@
             <img class="im"
                 src="https://img.freepik.com/premium-photo/vase-with-pink-flower-it-pink-background_889227-7590.jpg">
             <div class="overlay">
-                <!-- <div class="text">hello</div> -->
-                <div><img class="text"
+                <div>
+                    <img class="text"
                         src="https://img.freepik.com/premium-photo/vase-pink-flowers-sits-table_924629-271960.jpg">
                 </div>
             </div>
