--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -76,14 +76,14 @@
 
             <div class="imgg2">
                 <img class="img2" src="../IMG/decor4.jpeg" alt="image">
-                <!-- <p class="p2">Ceramic</p>
-                <button class="btn2">SEE COLLECTION</button> -->
+                <p class="p2">Ceramic</p>
+                <button class="btn2">SEE COLLECTION</button>
             </div>
 
             <div class="imgg3">
                 <img class="img3" src="../IMG/decor5.jpeg" alt="image">
-                <!-- <p class="p3">Wooden</p>
-                <button class="btn3">SEE COLLECTION</button> -->
+                <p class="p3">Wooden</p>
+                <button class="btn3">SEE COLLECTION</button>
 
             </div>
         </div>
