--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -84,11 +84,23 @@
                 <img class="img3" src="../IMG/decor5.jpeg" alt="image">
                 <p class="p3">Wooden</p>
                 <button class="btn3">SEE COLLECTION</button>
-
             </div>
         </div>
-    </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="box">
+                <img  class="image" src="https://img.freepik.com/premium-photo/different-types-vases-with-flowers-table_555017-1847.jpg">
+            <h1 class="head">Stay in the Loop for Exclusive Offers</h1>
+            <h3 class="head2">Subscribe to our newsletter to be the first to receive exlcusive offers.<br>
+            Discuss whats trending and discover your dream space with us.</h3>
 
+            <input class="email" type="text" placeholder="Enter your email...">
+            <button class="btn4">Subscribe</button>
+        </div>
+    </div>
+   
 
 
     <script src="./nav.js"></script>
