--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - codingnepalweb.com -->
 <html lang="en">
 
 <head>
@@ -23,10 +22,10 @@
             <span class="logo navLogo"><a href="#">Dream Decor</a></span>
 
             <div class="menu">
-                <div class="logo-toggle">
+                <!-- <div class="logo-toggle">
                     <span class="logo"><a href="#">Dream Decor</a></span>
                     <i class='bx bx-x siderbarClose'></i>
-                </div>
+                </div> -->
 
                 <ul class="nav-links">
                     <li><a href="#">Home</a></li>
@@ -37,21 +36,14 @@
             </div>
 
 
-            <div class="darkLight-searchBox">
-                <div class="dark-light">
-                    <i class='bx bx-moon moon'></i>
-                    <i class='bx bx-sun sun'></i>
-                </div>
-
                 <div class="searchBox">
                     <div class="searchToggle">
-                        <i class='bx bx-x cancel'></i>
-                        <i class='bx bx-search search'></i>
+                        
                     </div>
 
                     <div class="search-field">
                         <input type="text" placeholder="Search...">
-                        <i class='bx bx-search'></i>
+
                     </div>
                 </div>
             </div>
@@ -98,6 +90,9 @@
 
             <input class="email" type="text" placeholder="Enter your email...">
             <button class="btn4">Subscribe</button>
+        </div>
+        <div>
+            
         </div>
     </div>
    
