--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -50,6 +50,10 @@
         </div>
     </nav>
     <div class="divv">
+         <marquee style="color: white; font-size: 30px; font-weight: 900;" behaviour="slide" direction="right" scrollamount="10">
+            Get upto 40% off on live sale every monday
+        </marquee>
+        
         <img class="imgg" src="../IMG/decor1.jpeg">
         <h2 class="textt">Decorate Your Dream Space<br> With Our Finest Collection</h2>
         <p class="para">Explore our curated collections to discover the<br>perfect pieces for your unique vision </p>
