--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -50,8 +50,15 @@
         </div>
     </nav>
     <div class="divv">
-         <marquee style="color: white; font-size: 30px; font-weight: 900;" behaviour="slide" direction="right" scrollamount="10">
-            Get upto 40% off on live sale every monday
+        <marquee behaviour="slide" direction="left" scrollamount="10">
+            Get upto 40%off on sale every monday   
+        </marquee>
+         <marquee behaviour="scroll" direction="right">
+            <img src="../IMG/decor4.jpeg" width="120" height="80">
+            <img src="../IMG/decor5.jpeg" width="120" height="80">
+            <img src="../IMG/decor3.jpeg" width="120" height="80">
+            <img src="../IMG/decor2.jpeg" width="120" height="80">
+            
         </marquee>
         
         <img class="imgg" src="../IMG/decor1.jpeg">
