--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -50,7 +50,7 @@
 
     <div class="divv">
         <marquee behaviour="slide" direction="left" scrollamount="5">
-            <p style="font-size: 50px; font-weight: 900;">Get upto 40%off on sale every<span style="color: red;">
+            <p style="font-size: 50px; font-weight: 900;">Get upto 40%off every<span style="color: white;">
                     Monday</span></p>
         </marquee>
 
@@ -129,7 +129,66 @@
         <div>
 
         </div>
+
+        <!-- footer -->
+        <footer>
+            <div class="foot-panel1">
+                <button  style="padding: 5px; font-weight: 700 ; border-radius: 20px; cursor: pointer;">
+                    Back to Top </button>
+            </div>
+
+            <div class="foot-panel2">
+                <ul>
+                    <p style="font-weight: 700;">Get to Know Us</p>
+                    <a>Careers</a>
+                    <a>Blog</a>
+                </ul>
+
+                <ul>
+                    <p  style="font-weight: 700;"> Make Money with Us</p>
+                    <a>Sell products </a>
+                    <a>Become an Affiliate</a>
+                    <a>Self-Publish with Us</a>
+                </ul>
+
+                <ul>
+                    <p  style="font-weight: 700;">Payment Products</p>
+                    <a>Shop with Points</a>
+                    <a>Reload Your Balance</a>
+                </ul>
+
+                <ul>
+                    <p  style="font-weight: 700;">Let Us Help You</p>
+                    <a>Your Orders</a>
+                    <a>Shipping Rates & Policies</a>
+                    <a>Returns & Replacements</a>
+                    <a>Manage Your Content</a>
+                </ul>
+
+            </div>
+
+            <div class="foot-panel3">
+                <div class="logo1"></div>
+            </div>
+
+            <div class="foot-panel4">
+                <div class="pages">
+                    <a>Condition of User</a>
+                    <a>Privacy Notice</a>
+                    <a>Your ad Privacy Choices</a>
+                </div>
+                <div class="copy-right">
+                    © 1996-2024, Amazon.com, Inc. or its affiliates
+                </div>
+            </div>
+        </footer>
     </div>
+
+
+
+
+
+
 
 
 
