--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -17,36 +17,26 @@
 
 <body>
     <nav>
-        <div class="nav-bar">
+        <!-- <div class="nav-bar">
             <i class='bx bx-menu sidebarOpen'></i>
             <span class="logo navLogo"><a href="#">Dream Decor</a></span>
             <div class="menu">
-                <!-- <div class="logo-toggle">
+                 <div class="logo-toggle">
                     <span class="logo"><a href="#">Dream Decor</a></span>
                     <i class='bx bx-x siderbarClose'></i>
-                </div> -->
+                </div>  -->
 
                 <ul class="nav-links">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Collection</a></li>
+                    <li><a href="./collection.html">Collection</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="./sign.html">Contact</a></li>
                 </ul>
             </div>
-
-
-            <div class="searchBox">
-                <div class="searchToggle">
-
-                </div>
-
-                <div class="search">
-                    <input type="text" placeholder="Search here...">
-                </div>
-            </div>
-        </div>
         </div>
     </nav>
+
+
 
     <div class="divv">
         <marquee behaviour="slide" direction="left" scrollamount="5">
@@ -54,7 +44,7 @@
                     Monday</span></p>
         </marquee>
 
-        <h1>Categories</h1>
+        <!-- <h1>Categories</h1>
         <div style="display: flex; gap: 50px; margin-left: 60px; margin-top: 30px;">
             <div class="container">
                 <img class="image1" style="background-size: cover; height: 400px; width: 350px; border:2px solid black;"
@@ -73,7 +63,7 @@
                 </div>
             </div>
         </div>
-        <br>
+        <br> -->
 
         <marquee behaviour="scroll" direction="right">
             <img style="border-radius: 50px; border: 2px solid black;" src="../IMG/decor4.jpeg" width="120"
@@ -103,7 +93,7 @@
             <div class="imgg2">
                 <img class="img2" src="../IMG/decor4.jpeg" alt="image">
                 <p class="p2">Ceramic</p>
-                <button class="btn2">SEE COLLECTION</button>
+                <button class="btn2"> <a href="./collection.html"> SEE COLLECTION</a> </button>
             </div>
 
             <div class="imgg3">
@@ -133,7 +123,7 @@
         <!-- footer -->
         <footer>
             <div class="foot-panel1">
-                <button  style="padding: 5px; font-weight: 700 ; border-radius: 20px; cursor: pointer;">
+                <button style="padding: 5px; font-weight: 700 ; border-radius: 20px; cursor: pointer;">
                     Back to Top </button>
             </div>
 
@@ -145,20 +135,20 @@
                 </ul>
 
                 <ul>
-                    <p  style="font-weight: 700;"> Make Money with Us</p>
+                    <p style="font-weight: 700;"> Make Money with Us</p>
                     <a>Sell products </a>
                     <a>Become an Affiliate</a>
                     <a>Self-Publish with Us</a>
                 </ul>
 
                 <ul>
-                    <p  style="font-weight: 700;">Payment Products</p>
+                    <p style="font-weight: 700;">Payment Products</p>
                     <a>Shop with Points</a>
                     <a>Reload Your Balance</a>
                 </ul>
 
                 <ul>
-                    <p  style="font-weight: 700;">Let Us Help You</p>
+                    <p style="font-weight: 700;">Let Us Help You</p>
                     <a>Your Orders</a>
                     <a>Shipping Rates & Policies</a>
                     <a>Returns & Replacements</a>
@@ -178,7 +168,7 @@
                     <a>Your ad Privacy Choices</a>
                 </div>
                 <div class="copy-right">
-                    © 1996-2024, Amazon.com, Inc. or its affiliates
+                    © 2020-2024Inc
                 </div>
             </div>
         </footer>
