--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -26,25 +26,21 @@
                     <i class='bx bx-x siderbarClose'></i>
                 </div>  -->
 
-                <ul class="nav-links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="./collection.html">Collection</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="./sign.html">Contact</a></li>
-                </ul>
-            </div>
+        <ul class="nav-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="./collection.html">Collection</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="./sign.html">Contact</a></li>
+        </ul>
+        </div>
         </div>
     </nav>
 
 
 
-    <div class="divv">
-        <marquee behaviour="slide" direction="left" scrollamount="5">
-            <p style="font-size: 50px; font-weight: 900;">Get upto 40%off every<span style="color: white;">
-                    Monday</span></p>
-        </marquee>
 
-        <!-- <h1>Categories</h1>
+
+    <!-- <h1>Categories</h1>
         <div style="display: flex; gap: 50px; margin-left: 60px; margin-top: 30px;">
             <div class="container">
                 <img class="image1" style="background-size: cover; height: 400px; width: 350px; border:2px solid black;"
@@ -64,7 +60,36 @@
             </div>
         </div>
         <br> -->
+    <div class="divv">
+        <div style="display: flex; gap: 30px;">
+            <div>
+                <img style="height: 390px;width: 390px; margin-left: 19px; border: 2px solid black;"
+                  src="../IMG/decor7.jpeg">
+            </div>
+            <div>
+                <h1 style="font-weight: 600;">
+                    DECORATIVE  FLOWER VASES FOR
+                    YOUR DREAM SPACE.....
+                </h1>
+                <img style="height: 300px;width: 390px; border: 2px solid black;"  
+                src="../IMG/decor6.jpeg">
+            </div>
+        </div>
+        <br>
+        <h2>FILL YOUR HOME WITH YOUR OWN CHOICE AND GIVE A MODERN CHICK LOOK</h2>
 
+        <img class="imgg" src="https://www.purehomeandliving.com/cdn/shop/collections/vase.png?v=1708580442">
+        <h2 class="textt">Decorate Your Dream Space<br> With Our Finest Collection</h2>
+        <p class="para">Explore our curated collections to discover the<br>perfect pieces for your unique vision </p>
+        <br>
+        <button class="buttonn">Explore Collection</button>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <marquee behaviour="scroll" direction="right">
             <img style="border-radius: 50px; border: 2px solid black;" src="../IMG/decor4.jpeg" width="120"
                 height="100">
@@ -72,16 +97,15 @@
             <img style="border-radius: 50px;border: 2px solid black;" src="../IMG/decor3.jpeg" width="120" height="100">
             <img style="border-radius: 50px;border: 2px solid black;" src="../IMG/decor2.jpeg" width="120" height="100">
         </marquee>
-
-        <img class="imgg" src="../IMG/decor1.jpeg">
-        <h2 class="textt">Decorate Your Dream Space<br> With Our Finest Collection</h2>
-        <p class="para">Explore our curated collections to discover the<br>perfect pieces for your unique vision </p>
         <br>
-        <button class="buttonn">Explore Collection</button>
+        <br>
+        <marquee behaviour="slide" direction="left" scrollamount="5">
+            <p style="font-size: 50px; font-weight: 900;">Get upto 40%off every<span style="color: white;">
+                    Monday</span></p>
+        </marquee>
         <div>
             <h1 class="heading">Top Categories</h1>
         </div>
-
         <div class="margin">
             <div>
                 <img class="img1" src="../IMG/decor2.jpeg" alt="image">
