--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -64,15 +64,39 @@
         <div style="display: flex; gap: 30px;">
             <div>
                 <img style="height: 390px;width: 390px; margin-left: 19px; border: 2px solid black;"
-                  src="../IMG/decor7.jpeg">
+                    src="../IMG/decor7.jpeg">
             </div>
             <div>
-                <h1 style="font-weight: 600;">
-                    DECORATIVE  FLOWER VASES FOR
+                <h2>
+                    DECORATIVE FLOWER VASES FOR
                     YOUR DREAM SPACE.....
-                </h1>
-                <img style="height: 300px;width: 390px; border: 2px solid black;"  
-                src="../IMG/decor6.jpeg">
+                </h2>
+                <div style="display: flex; gap: 30px;">
+                    <div class="flip-box">
+                        <div class="flip-box-inner">
+                            <div class="flip-box-front">
+                                <img src="../IMG/decor4.jpeg" alt="Paris" style="width:230px;height:240px">
+                            </div>
+                            <div class="flip-box-back">
+                                <img src="../IMG/decor5.jpeg" alt="Paris" style="width:230px;height:240px">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="flip-box2">
+                        <div class="flip-box-inner2">
+                            <div class="flip-box-front2">
+                                <img src="../IMG/decor4.jpeg" alt="Paris" style="width:230px;height:240px">
+                            </div>
+                            <div class="flip-box-back2">
+                                <img src="../IMG/decor5.jpeg" alt="Paris" style="width:230px;height:240px">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
         <br>
