--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -75,10 +75,10 @@
                     <div class="flip-box">
                         <div class="flip-box-inner">
                             <div class="flip-box-front">
-                                <img src="../IMG/decor4.jpeg" alt="Paris" style="width:230px;height:240px">
+                                <img src="../IMG/decor4.jpeg" style="width:230px;height:240px">
                             </div>
                             <div class="flip-box-back">
-                                <img src="../IMG/decor5.jpeg" alt="Paris" style="width:230px;height:240px">
+                                <img src="https://img.freepik.com/premium-photo/blue-flowers-blue-vase-white-shelf-3d-rendering-generative-ai_344451-421.jpg" style="width:230px;height:240px">
 
                             </div>
                         </div>
@@ -87,15 +87,22 @@
                     <div class="flip-box2">
                         <div class="flip-box-inner2">
                             <div class="flip-box-front2">
-                                <img src="../IMG/decor4.jpeg" alt="Paris" style="width:230px;height:240px">
+                                <img src="https://i.pinimg.com/736x/ad/b0/35/adb0351f85dcf69cf8e2512ba22cc594.jpg" style="width:230px;height:240px">
                             </div>
                             <div class="flip-box-back2">
-                                <img src="../IMG/decor5.jpeg" alt="Paris" style="width:230px;height:240px">
+                                <img src="../IMG/decor3.jpeg"  style="width:230px;height:240px">
 
                             </div>
                         </div>
                     </div>
                 </div>
+                <br>
+                <marquee behaviour="scroll" direction="right" scrollamount="15">
+                    <h2>Exiciting deals upto 50% off on sale</h2>
+                </marquee>
+                <marquee behaviour="scroll" direction="left" scrollamount="15">
+                    <h2>Exiciting deals upto 50% off on sale</h2>
+                </marquee>
 
             </div>
         </div>
