--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -11,11 +11,12 @@
 
     <!-- ===== Boxicons CSS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>wepage</title>
 </head>
 
-<body>
+<body style="background-color: teal;">
     <nav>
         <!-- <div class="nav-bar">
             <i class='bx bx-menu sidebarOpen'></i>
@@ -35,31 +36,6 @@
         </div>
         </div>
     </nav>
-
-
-
-
-
-    <!-- <h1>Categories</h1>
-        <div style="display: flex; gap: 50px; margin-left: 60px; margin-top: 30px;">
-            <div class="container">
-                <img class="image1" style="background-size: cover; height: 400px; width: 350px; border:2px solid black;"
-                    src="../IMG/deor6.jpeg">
-                <div class="middle">
-                    <div class="text1"></div>
-                    <p class="text1">Branch shape wall decor</p>
-                </div>
-            </div>
-
-            <div class="container2">
-                <img class="image2" style=" background-size: cover;width: 350px; height:400px;border:2px solid black;"
-                    src="../IMG/decor7.jpeg">
-                <div class="overlay">
-                    <div class="text2">Leaf shape wall decor</div>
-                </div>
-            </div>
-        </div>
-        <br> -->
     <div class="divv">
         <div style="display: flex; gap: 30px;">
             <div>
@@ -75,11 +51,12 @@
                     <div class="flip-box">
                         <div class="flip-box-inner">
                             <div class="flip-box-front">
-                                <img src="../IMG/decor4.jpeg" style="width:230px;height:240px">
+                                <img style="width:230px;height:240px"
+                                src="../IMG/decor12.jpeg">
                             </div>
                             <div class="flip-box-back">
-                                <img src="https://img.freepik.com/premium-photo/blue-flowers-blue-vase-white-shelf-3d-rendering-generative-ai_344451-421.jpg" style="width:230px;height:240px">
-
+                                <img  style="width:230px;height:240px"
+                                src="../IMG/decor8.jpeg">
                             </div>
                         </div>
                     </div>
@@ -87,94 +64,47 @@
                     <div class="flip-box2">
                         <div class="flip-box-inner2">
                             <div class="flip-box-front2">
-                                <img src="https://i.pinimg.com/736x/ad/b0/35/adb0351f85dcf69cf8e2512ba22cc594.jpg" style="width:230px;height:240px">
+                                <img style="width:230px;height:240px"
+                                src="../IMG/decor9.jpeg">
                             </div>
                             <div class="flip-box-back2">
-                                <img src="../IMG/decor3.jpeg"  style="width:230px;height:240px">
-
+                                <img  style="width:230px;height:240px"
+                                src="../IMG/decor11.jpeg">
                             </div>
                         </div>
                     </div>
                 </div>
-                <br>
                 <marquee behaviour="scroll" direction="right" scrollamount="15">
-                    <h2>Exiciting deals upto 50% off on sale</h2>
+                    <h2 style="color: white;">Exiciting offers upto 50% off on sale</h2>
                 </marquee>
                 <marquee behaviour="scroll" direction="left" scrollamount="15">
-                    <h2>Exiciting deals upto 50% off on sale</h2>
+                    <h2  style="color: white;">Exiciting offers upto 50% off on sale</h2>
                 </marquee>
-
             </div>
         </div>
         <br>
-        <h2>FILL YOUR HOME WITH YOUR OWN CHOICE AND GIVE A MODERN CHICK LOOK</h2>
-
-        <img class="imgg" src="https://www.purehomeandliving.com/cdn/shop/collections/vase.png?v=1708580442">
-        <h2 class="textt">Decorate Your Dream Space<br> With Our Finest Collection</h2>
-        <p class="para">Explore our curated collections to discover the<br>perfect pieces for your unique vision </p>
-        <br>
-        <button class="buttonn">Explore Collection</button>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <marquee behaviour="scroll" direction="right">
-            <img style="border-radius: 50px; border: 2px solid black;" src="../IMG/decor4.jpeg" width="120"
-                height="100">
-            <img style="border-radius: 50px;border: 2px solid black;" src="../IMG/decor5.jpeg" width="120" height="100">
-            <img style="border-radius: 50px;border: 2px solid black;" src="../IMG/decor3.jpeg" width="120" height="100">
-            <img style="border-radius: 50px;border: 2px solid black;" src="../IMG/decor2.jpeg" width="120" height="100">
-        </marquee>
-        <br>
-        <br>
-        <marquee behaviour="slide" direction="left" scrollamount="5">
-            <p style="font-size: 50px; font-weight: 900;">Get upto 40%off every<span style="color: white;">
-                    Monday</span></p>
-        </marquee>
-        <div>
-            <h1 class="heading">Top Categories</h1>
-        </div>
-        <div class="margin">
-            <div>
-                <img class="img1" src="../IMG/decor2.jpeg" alt="image">
-                <p class="p1">Glass</p>
-                <button class="btn1">SEE COLLECTION</button>
-
+        <h2>FILL YOUR HOME WITH YOUR OWN CHOICE AND GIVE A MODERN LOOK</h2>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img     style="height: 600px; "  src="https://cdn.pixabay.com/photo/2019/03/20/21/21/cherry-blossoms-4069596_1280.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img style="height: 600px; " src="https://images.rawpixel.com/image_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIzLTA4L3Jhd3BpeGVsX29mZmljZV8zNV9mbG93ZXJzX2luX3Zhc2VfY29vbF90b25lX3Byb19zdHVkaW9fNjk5NjcxOTItYTQ4Ni00OTk0LTg4YTUtZmVlOGU1Mjk2OGVmXzEuanBn.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img   style="height: 600px; ; "  src="https://img.freepik.com/premium-photo/vase-with-flower-hd-8k-wallpaper-stock-photographic-image_890746-116170.jpg" class="d-block w-100" alt="...">
+              </div>
             </div>
-
-            <div class="imgg2">
-                <img class="img2" src="../IMG/decor4.jpeg" alt="image">
-                <p class="p2">Ceramic</p>
-                <button class="btn2"> <a href="./collection.html"> SEE COLLECTION</a> </button>
-            </div>
-
-            <div class="imgg3">
-                <img class="img3" src="../IMG/decor5.jpeg" alt="image">
-                <p class="p3">Wooden</p>
-                <button class="btn3">SEE COLLECTION</button>
-            </div>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="box">
-            <img class="image"
-                src="https://img.freepik.com/premium-photo/different-types-vases-with-flowers-table_555017-1847.jpg">
-            <h1 class="head">Stay in the Loop for Exclusive Offers</h1>
-            <h3 class="head2">Subscribe to our newsletter to be the first to receive exlcusive offers.<br>
-                Discuss whats trending and discover your dream space with us.</h3>
-
-            <input class="email" type="text" placeholder="Enter your email...">
-            <button class="btn4">Subscribe</button>
-        </div>
-        <div>
-
-        </div>
-
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         <!-- footer -->
         <footer>
             <div class="foot-panel1">
@@ -237,7 +167,7 @@
 
 
 
-    <script src="./nav.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
 
