--- a/navbaar/collection.html
+++ b/navbaar/collection.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./nav.css">
     <title>Document</title>
 </head>
+
 <body>
-    collection page
+    <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="./collection.html">Collection</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="./sign.html">Contact</a></li>
+    </ul>
+    </nav>
+    <hr>
+    <h1>Shop from here......</h1>
+
+    <div style="display: flex;">
+        <div class="product-card">
+            <div class="product-tumb">
+                <img src="../IMG/decor16.jpeg" alt="">
+            </div>
+        </div>
+
+        <div class="product-card">
+            <div class="product-tumb">
+                <img src="../IMG/decor16.jpeg" alt="">
+            </div>
+        </div>
+
+        <div class="product-card">
+            <div class="product-tumb">
+                <img src="../IMG/decor16.jpeg" alt="">
+            </div>
+            
+        </div>
+    </div>
+
 </body>
+
 </html>
