--- a/navbaar/collection.html
+++ b/navbaar/collection.html
@@ -19,24 +19,89 @@
     <hr>
     <h1>Shop from here......</h1>
 
-    <div style="display: flex;">
+    <div style="display: flex; margin-left: 40px;">
         <div class="product-card">
             <div class="product-tumb">
-                <img src="../IMG/decor16.jpeg" alt="">
+                <img src="../IMG/decor16.jpeg" alt="image">
             </div>
+            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Ceramic flower vases</h3>
+            <h4 style="text-align: center;">price=$32</h4>
+            <br>
+            <div style="margin-left: 40px;">
+                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+            </div>
+
         </div>
 
         <div class="product-card">
             <div class="product-tumb">
-                <img src="../IMG/decor16.jpeg" alt="">
+                <img src="../IMG/decor22.jpg" alt="image">
             </div>
+            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Ceramic flower vases</h3>
+            <h4 style="text-align: center;">price=$32</h4>
+            <br>
+            <div style="margin-left: 40px;">
+                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+            </div>
+        </div>
+
+
+        <div class="product-card">
+            <div class="product-tumb">
+                <img src="../IMG/decor18.jpg" alt="image">
+            </div>
+            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Glass flower vases</h3>
+            <h4 style="text-align: center;">price=$32</h4>
+            <br>
+            <div style="margin-left: 40px;">
+                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+            </div>
+        </div>
+    </div>
+
+    <div style="display: flex; margin-left: 40px;">
+        <div class="product-card">
+            <div class="product-tumb">
+                <img src="../IMG/decor19.jpg" alt="image">
+            </div>
+            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Ceramic flower vases</h3>
+            <h4 style="text-align: center;">price=$32</h4>
+            <br>
+            <div style="margin-left: 40px;">
+                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+            </div>
+
         </div>
 
         <div class="product-card">
             <div class="product-tumb">
-                <img src="../IMG/decor16.jpeg" alt="">
+                <img src="../IMG/decor20.jpg" alt="image">
             </div>
-            
+            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Ceramic flower vases</h3>
+            <h4 style="text-align: center;">price=$32</h4>
+            <br>
+            <div style="margin-left: 40px;">
+                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+            </div>
+        </div>
+
+
+        <div class="product-card">
+            <div class="product-tumb">
+                <img src="../IMG/decor21.jpg" alt="image">
+            </div>
+            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Glass flower vases</h3>
+            <h4 style="text-align: center;">price=$32</h4>
+            <br>
+            <div style="margin-left: 40px;">
+                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+            </div>
         </div>
     </div>
 
