--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -28,14 +28,13 @@
                 </div>  -->
 
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
+            <li><a href="./nav.html">Home</a></li>
             <li><a href="./collection.html">Collection</a></li>
             <li><a href="#">About</a></li>
             <li><a href="./sign.html">Contact</a></li>
         </ul>
-        </div>
-        </div>
     </nav>
+    <hr>
     <div class="divv">
         <div style="display: flex; gap: 30px;">
             <div>
