--- a/navbaar/collection.html
+++ b/navbaar/collection.html
@@ -22,7 +22,7 @@
     <div style="display: flex; margin-left: 40px;">
         <div class="product-card">
             <div class="product-tumb">
-                <img src="../IMG/decor16.jpeg" alt="image">
+                <img src="../IMG/decor25.jpg" alt="image">
             </div>
             <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Ceramic flower vases</h3>
             <h4 style="text-align: center;">price=$32</h4>
@@ -50,7 +50,7 @@
 
         <div class="product-card">
             <div class="product-tumb">
-                <img src="../IMG/decor18.jpg" alt="image">
+                <img src="../IMG/decor19.jpg" alt="image">
             </div>
             <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Glass flower vases</h3>
             <h4 style="text-align: center;">price=$32</h4>
@@ -65,7 +65,7 @@
     <div style="display: flex; margin-left: 40px;">
         <div class="product-card">
             <div class="product-tumb">
-                <img src="../IMG/decor19.jpg" alt="image">
+                <img src="../IMG/decor23.jpg" alt="image">
             </div>
             <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Ceramic flower vases</h3>
             <h4 style="text-align: center;">price=$32</h4>
@@ -93,7 +93,50 @@
 
         <div class="product-card">
             <div class="product-tumb">
-                <img src="../IMG/decor21.jpg" alt="image">
+                <img src="../IMG/decor24.jpg" alt="image">
+            </div>
+            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Glass flower vases</h3>
+            <h4 style="text-align: center;">price=$32</h4>
+            <br>
+            <div style="margin-left: 40px;">
+                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+            </div>
+        </div>
+    </div>
+
+    <div style="display: flex; margin-left: 40px;">
+        <div class="product-card">
+            <div class="product-tumb">
+                <img src="../IMG/decor18.jpg" alt="image">
+            </div>
+            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Ceramic flower vases</h3>
+            <h4 style="text-align: center;">price=$32</h4>
+            <br>
+            <div style="margin-left: 40px;">
+                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+            </div>
+
+        </div>
+
+        <div class="product-card">
+            <div class="product-tumb">
+                <img src="../IMG/decor2.jpeg" alt="image">
+            </div>
+            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Ceramic flower vases</h3>
+            <h4 style="text-align: center;">price=$32</h4>
+            <br>
+            <div style="margin-left: 40px;">
+                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+            </div>
+        </div>
+
+
+        <div class="product-card">
+            <div class="product-tumb">
+                <img src="../IMG/decor26.jpg" alt="image">
             </div>
             <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Glass flower vases</h3>
             <h4 style="text-align: center;">price=$32</h4>
