--- a/navbaar/collection.html
+++ b/navbaar/collection.html
@@ -24,11 +24,11 @@
             <div class="product-tumb">
                 <img src="../IMG/decor25.jpg" alt="image">
             </div>
-            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Ceramic flower vases</h3>
-            <h4 style="text-align: center;">price=$32</h4>
+            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Ceramic flower vase</h3>
+            <h4 style="text-align: center;">price=$23</h4>
             <br>
             <div style="margin-left: 40px;">
-                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
+                <button style="padding: 5px; background-color: black; color:white; ">Add to cart</button>
                 <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
             </div>
 
@@ -38,8 +38,8 @@
             <div class="product-tumb">
                 <img src="../IMG/decor22.jpg" alt="image">
             </div>
-            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Ceramic flower vases</h3>
-            <h4 style="text-align: center;">price=$32</h4>
+            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Ceramic flower vase</h3>
+            <h4 style="text-align: center;">price=$12</h4>
             <br>
             <div style="margin-left: 40px;">
                 <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
@@ -52,8 +52,8 @@
             <div class="product-tumb">
                 <img src="../IMG/decor19.jpg" alt="image">
             </div>
-            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Glass flower vases</h3>
-            <h4 style="text-align: center;">price=$32</h4>
+            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Ceramic flower vase</h3>
+            <h4 style="text-align: center;">price=$22</h4>
             <br>
             <div style="margin-left: 40px;">
                 <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
@@ -68,7 +68,7 @@
                 <img src="../IMG/decor23.jpg" alt="image">
             </div>
             <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Ceramic flower vases</h3>
-            <h4 style="text-align: center;">price=$32</h4>
+            <h4 style="text-align: center;">price=$13</h4>
             <br>
             <div style="margin-left: 40px;">
                 <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
@@ -82,7 +82,7 @@
                 <img src="../IMG/decor20.jpg" alt="image">
             </div>
             <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Ceramic flower vases</h3>
-            <h4 style="text-align: center;">price=$32</h4>
+            <h4 style="text-align: center;">price=$26</h4>
             <br>
             <div style="margin-left: 40px;">
                 <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
@@ -110,8 +110,8 @@
             <div class="product-tumb">
                 <img src="../IMG/decor18.jpg" alt="image">
             </div>
-            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Ceramic flower vases</h3>
-            <h4 style="text-align: center;">price=$32</h4>
+            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Glass flower vases</h3>
+            <h4 style="text-align: center;">price=$15</h4>
             <br>
             <div style="margin-left: 40px;">
                 <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
@@ -124,8 +124,8 @@
             <div class="product-tumb">
                 <img src="../IMG/decor2.jpeg" alt="image">
             </div>
-            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Ceramic flower vases</h3>
-            <h4 style="text-align: center;">price=$32</h4>
+            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Glass flower vase</h3>
+            <h4 style="text-align: center;">price=$11</h4>
             <br>
             <div style="margin-left: 40px;">
                 <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
@@ -138,8 +138,8 @@
             <div class="product-tumb">
                 <img src="../IMG/decor26.jpg" alt="image">
             </div>
-            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Glass flower vases</h3>
-            <h4 style="text-align: center;">price=$32</h4>
+            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Glass flower vase</h3>
+            <h4 style="text-align: center;">price=$14</h4>
             <br>
             <div style="margin-left: 40px;">
                 <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
@@ -153,7 +153,7 @@
             <div class="product-tumb">
                 <img src="../IMG/decor27.jpg" alt="image">
             </div>
-            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Ceramic flower vases</h3>
+            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Tube glass vases</h3>
             <h4 style="text-align: center;">price=$32</h4>
             <br>
             <div style="margin-left: 40px;">
@@ -167,8 +167,8 @@
             <div class="product-tumb">
                 <img src="../IMG/decor28.jpg" alt="image">
             </div>
-            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Ceramic flower vases</h3>
-            <h4 style="text-align: center;">price=$32</h4>
+            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Tube shape vases</h3>
+            <h4 style="text-align: center;">price=$22</h4>
             <br>
             <div style="margin-left: 40px;">
                 <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
@@ -181,8 +181,8 @@
             <div class="product-tumb">
                 <img src="../IMG/decor29.jpg" alt="image">
             </div>
-            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Glass flower vases</h3>
-            <h4 style="text-align: center;">price=$32</h4>
+            <h3 style="font-weight: 800; margin-top: 9px; text-align: center;">Glass flower vase</h3>
+            <h4 style="text-align: center;">price=$21</h4>
             <br>
             <div style="margin-left: 40px;">
                 <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
