--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -104,11 +104,14 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+            <br>
+            <br>
+          <button style="padding: 10px; justify-content: center;">
+            Go to shop
+          </button>
         <!-- footer -->
         <footer>
             <div class="foot-panel1">
-                <button style="padding: 5px; font-weight: 700 ; border-radius: 20px; cursor: pointer;">
-                    Back to Top </button>
             </div>
 
             <div class="foot-panel2">
