--- a/navbaar/sign.html
+++ b/navbaar/sign.html
@@ -6,6 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    hello
+    <div>
+        <form>
+            <label for="email"><b>Name</b></label>
+            <input type="text" placeholder="Enter Name" name="name" required>
+
+            <label for="email"><b>Email</b></label>
+            <input type="text" placeholder="Enter Email" name="email" required>
+
+            <label for="psw"><b>Password</b></label>
+            <input type="password" placeholder="Enter Password" name="psw" required>
+
+            <label for="psw-repeat"><b>Confirm Password</b></label>
+            <input type="password" placeholder="Repeat Password" name="psw-repeat" require>
+        </form>
+    </div>
 </body>
 </html>
