--- a/navbaar/sign.html
+++ b/navbaar/sign.html
@@ -20,31 +20,26 @@
     </nav>
     <hr>
     <br>
-    
-        <div>
-            <form style="text-align: center;">
-                <div style=" margin-top: 20px;">
-                    <label style="margin: 50px;" for="email"><b>Name</b></label>
-                    <input style="height: 50px; width: 250px;" type="text" placeholder="Enter Name" name="name"
-                        required>
-                </div>
-                <br>
-                <div>
-                    <label style="margin: 50px;" for="email"><b>Email</b></label>
-                    <input style="height: 50px; width: 250px;" type="text" placeholder="Enter Email" name="email"
-                        required>
-                </div>
-                <br>
-                <div>
-                    <label style="margin: 32px;" for="psw"><b>Password</b></label>
-                    <input style="height: 50px; width: 250px;" type="password" placeholder="Enter Password" name="psw"
-                        required>
-                </div>
-                <br>
-            </form>
-            <br>
-            <button style="margin-left: 530px; padding: 10px; border-radius: 20px;">Sign in</button>
-        </div>
+
+    <div class="login-box">
+        <h2>Signin</h2>
+        <form>
+            <div class="user-box">
+                <input type="text" name="" required="">
+                <label>Enter name</label>
+            </div>
+            <div class="user-box">
+                <input type="password" name="" required="">
+                <label>Enter Email</label>
+            </div>
+            <div class="user-box">
+                <input type="password" name="" required="">
+                <label>Password</label>
+            </div>
+        </form>
+        <!-- <button style="">Signin</button> -->
+    </div>
+
 </body>
 
 </html>
