--- a/navbaar/sign.html
+++ b/navbaar/sign.html
@@ -24,20 +24,20 @@
     <div class="login-box">
         <h2>Signin</h2>
         <form>
-            <div class="user-box">
-                <input type="text" name="" required="">
-                <label>Enter name</label>
+            <div class="user-box1">
+                <label for="email"><b>Name</b></label>
+                <input type="text" placeholder="Enter Name" name="email" required>
             </div>
-            <div class="user-box">
-                <input type="password" name="" required="">
-                <label>Enter Email</label>
+            <div class="user-box2">
+                <label for="email"><b>Email</b></label>
+                <input type="text" placeholder="Enter Email" name="email" required>
             </div>
-            <div class="user-box">
-                <input type="password" name="" required="">
-                <label>Password</label>
+            <div class="user-box3">
+            <label for="email"><b>Password</b></label>
+            <input type="text" placeholder="Password" name="email" required>
             </div>
         </form>
-        <!-- <button style="">Signin</button> -->
+        <button class="signinbtn">Signin</button>
     </div>
 
 </body>
