--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -16,7 +16,7 @@
     <title>wepage</title>
 </head>
 
-<body style="background-color: teal;">
+<body style="background-color: lightcoral;">
     <nav>
         <!-- <div class="nav-bar">
             <i class='bx bx-menu sidebarOpen'></i>
@@ -35,6 +35,29 @@
         </ul>
     </nav>
     <hr>
+    <br>
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img     style="height: 600px; width: 80%; "  src="https://cdn.pixabay.com/photo/2019/03/20/21/21/cherry-blossoms-4069596_1280.jpg" class="d-block w-100" alt="...">
+            <h1 style="margin-top: -50px;">flat 50%off</h1>
+          </div>
+          <div class="carousel-item">
+            <img style="height: 600px; width: 80%; " src="https://images.rawpixel.com/image_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIzLTA4L3Jhd3BpeGVsX29mZmljZV8zNV9mbG93ZXJzX2luX3Zhc2VfY29vbF90b25lX3Byb19zdHVkaW9fNjk5NjcxOTItYTQ4Ni00OTk0LTg4YTUtZmVlOGU1Mjk2OGVmXzEuanBn.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img   style="height: 600px; width: 80% ; "  src="https://img.freepik.com/premium-photo/vase-with-flower-hd-8k-wallpaper-stock-photographic-image_890746-116170.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     <div class="divv">
         <div style="display: flex; gap: 30px;">
             <div>
@@ -82,30 +105,6 @@
             </div>
         </div>
         <br>
-        <h2>FILL YOUR HOME WITH YOUR OWN CHOICE AND GIVE A MODERN LOOK</h2>
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img     style="height: 600px; "  src="https://cdn.pixabay.com/photo/2019/03/20/21/21/cherry-blossoms-4069596_1280.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img style="height: 600px; " src="https://images.rawpixel.com/image_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIzLTA4L3Jhd3BpeGVsX29mZmljZV8zNV9mbG93ZXJzX2luX3Zhc2VfY29vbF90b25lX3Byb19zdHVkaW9fNjk5NjcxOTItYTQ4Ni00OTk0LTg4YTUtZmVlOGU1Mjk2OGVmXzEuanBn.jpg" class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img   style="height: 600px; ; "  src="https://img.freepik.com/premium-photo/vase-with-flower-hd-8k-wallpaper-stock-photographic-image_890746-116170.jpg" class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-            <br>
-            <br>
           <button style="padding: 10px; justify-content: center;">
             Go to shop
           </button>
