--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -11,12 +11,13 @@
 
     <!-- ===== Boxicons CSS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <title>wepage</title>
 </head>
 
-<body style="background-color: lightcoral;">
+<body style="background-color: lightsteelblue;">
     <nav>
         <!-- <div class="nav-bar">
             <i class='bx bx-menu sidebarOpen'></i>
@@ -26,7 +27,7 @@
                     <span class="logo"><a href="#">Dream Decor</a></span>
                     <i class='bx bx-x siderbarClose'></i>
                 </div>  -->
-
+               
         <ul class="nav-links">
             <li><a href="./nav.html">Home</a></li>
             <li><a href="./collection.html">Collection</a></li>
@@ -38,26 +39,36 @@
     <br>
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img     style="height: 600px; width: 80%; "  src="https://cdn.pixabay.com/photo/2019/03/20/21/21/cherry-blossoms-4069596_1280.jpg" class="d-block w-100" alt="...">
-            <h1 style="margin-top: -50px;">flat 50%off</h1>
-          </div>
-          <div class="carousel-item">
-            <img style="height: 600px; width: 80%; " src="https://images.rawpixel.com/image_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIzLTA4L3Jhd3BpeGVsX29mZmljZV8zNV9mbG93ZXJzX2luX3Zhc2VfY29vbF90b25lX3Byb19zdHVkaW9fNjk5NjcxOTItYTQ4Ni00OTk0LTg4YTUtZmVlOGU1Mjk2OGVmXzEuanBn.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img   style="height: 600px; width: 80% ; "  src="https://img.freepik.com/premium-photo/vase-with-flower-hd-8k-wallpaper-stock-photographic-image_890746-116170.jpg" class="d-block w-100" alt="...">
-          </div>
+            <div class="carousel-item active">
+                <img style="height: 500px; width: 800px; "
+                    src="../IMG/decor17.jpg"
+                    class="d-block w-100" alt="...">
+                <h1 style="margin-top: -50px;">flat 50%off</h1>
+            </div>
+            <div class="carousel-item">
+                <img style="height: 500px; width: 800px; "
+                    src="https://images.rawpixel.com/image_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIzLTA4L3Jhd3BpeGVsX29mZmljZV8zNV9mbG93ZXJzX2luX3Zhc2VfY29vbF90b25lX3Byb19zdHVkaW9fNjk5NjcxOTItYTQ4Ni00OTk0LTg4YTUtZmVlOGU1Mjk2OGVmXzEuanBn.jpg"
+                    class="d-block w-100" alt="...">
+                <h1 style="margin-top: -50px;">flat 50%off</h1>
+            </div>
+            <div class="carousel-item">
+                <img style="height: 500px; width: 800px ; "
+                    src="https://img.freepik.com/premium-photo/vase-with-flower-hd-8k-wallpaper-stock-photographic-image_890746-116170.jpg"
+                    class="d-block w-100" alt="...">
+                <h1 style="margin-top: -50px;">flat 50%off</h1>
+            </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
         </button>
-      </div>
+    </div>
     <div class="divv">
         <div style="display: flex; gap: 30px;">
             <div>
@@ -73,12 +84,10 @@
                     <div class="flip-box">
                         <div class="flip-box-inner">
                             <div class="flip-box-front">
-                                <img style="width:230px;height:240px"
-                                src="../IMG/decor12.jpeg">
+                                <img style="width:230px;height:240px" src="../IMG/decor12.jpeg">
                             </div>
                             <div class="flip-box-back">
-                                <img  style="width:230px;height:240px"
-                                src="../IMG/decor8.jpeg">
+                                <img style="width:230px;height:240px" src="../IMG/decor8.jpeg">
                             </div>
                         </div>
                     </div>
@@ -86,12 +95,10 @@
                     <div class="flip-box2">
                         <div class="flip-box-inner2">
                             <div class="flip-box-front2">
-                                <img style="width:230px;height:240px"
-                                src="../IMG/decor9.jpeg">
+                                <img style="width:230px;height:240px" src="../IMG/decor9.jpeg">
                             </div>
                             <div class="flip-box-back2">
-                                <img  style="width:230px;height:240px"
-                                src="../IMG/decor11.jpeg">
+                                <img style="width:230px;height:240px" src="../IMG/decor11.jpeg">
                             </div>
                         </div>
                     </div>
@@ -100,14 +107,14 @@
                     <h2 style="color: white;">Exiciting offers upto 50% off on sale</h2>
                 </marquee>
                 <marquee behaviour="scroll" direction="left" scrollamount="15">
-                    <h2  style="color: white;">Exiciting offers upto 50% off on sale</h2>
+                    <h2 style="color: white;">Exiciting offers upto 50% off on sale</h2>
                 </marquee>
             </div>
         </div>
         <br>
-          <button style="padding: 10px; justify-content: center;">
+        <button class="shopbtn">
             Go to shop
-          </button>
+        </button>
         <!-- footer -->
         <footer>
             <div class="foot-panel1">
@@ -160,15 +167,9 @@
         </footer>
     </div>
 
-
-
-
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 
 </body>
 
