--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -17,7 +17,7 @@
     <title>wepage</title>
 </head>
 
-<body style="background-color: lightsteelblue;">
+<body style="background-color: teal;">
     <nav>
         <!-- <div class="nav-bar">
             <i class='bx bx-menu sidebarOpen'></i>
