--- a/navbaar/sign.html
+++ b/navbaar/sign.html
@@ -21,20 +21,22 @@
     <hr>
     <br>
 
-    <div class="login-box">
+    <div style="color: white;"                         class="login-box">
         <h2>Signin</h2>
         <form>
             <div class="user-box1">
-                <label for="email"><b>Name</b></label>
-                <input type="text" placeholder="Enter Name" name="email" required>
+                <label for="name"><b>Name</b></label>
+                <input type="text" placeholder="" name="name" required>
             </div>
+            <br>
             <div class="user-box2">
                 <label for="email"><b>Email</b></label>
-                <input type="text" placeholder="Enter Email" name="email" required>
+                <input type="text" placeholder="" name="email" required>
             </div>
+            <br>
             <div class="user-box3">
             <label for="email"><b>Password</b></label>
-            <input type="text" placeholder="Password" name="email" required>
+            <input type="text" placeholder="" name="email" required>
             </div>
         </form>
         <button class="signinbtn">Signin</button>
