--- a/navbaar/sign.html
+++ b/navbaar/sign.html
@@ -21,8 +21,8 @@
     <hr>
     <br>
 
-    <div style="color: white;"                         class="login-box">
-        <h2>Signin</h2>
+    <div style="color: white;" class="login-box">
+        <h2>Register</h2>
         <form>
             <div class="user-box1">
                 <label for="name"><b>Name</b></label>
@@ -30,11 +30,16 @@
             </div>
             <br>
             <div class="user-box2">
+                <label for="contact"><b>Contact</b></label>
+                <input type="text" placeholder="" name="name" required>
+            </div>
+            <br>
+            <div class="user-box3">
                 <label for="email"><b>Email</b></label>
                 <input type="text" placeholder="" name="email" required>
             </div>
             <br>
-            <div class="user-box3">
+            <div class="user-box4">
             <label for="email"><b>Password</b></label>
             <input type="text" placeholder="" name="email" required>
             </div>
