--- a/navbaar/collection.html
+++ b/navbaar/collection.html
@@ -17,7 +17,7 @@
     </ul>
     </nav>
     <hr>
-    <h1>Shop from here......</h1>
+    <h1 style="color: aliceblue;">Shop for more ....</h1>
 
     <div style="display: flex; margin-left: 40px;">
         <div class="product-card">
