--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -37,38 +37,6 @@
     </nav>
     <hr>
     <br>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img style="height: 500px; width: 800px; "
-                    src="../IMG/decor17.jpg"
-                    class="d-block w-100" alt="...">
-                <h1 style="margin-top: -50px;">flat 50%off</h1>
-            </div>
-            <div class="carousel-item">
-                <img style="height: 500px; width: 800px; "
-                    src="https://images.rawpixel.com/image_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIzLTA4L3Jhd3BpeGVsX29mZmljZV8zNV9mbG93ZXJzX2luX3Zhc2VfY29vbF90b25lX3Byb19zdHVkaW9fNjk5NjcxOTItYTQ4Ni00OTk0LTg4YTUtZmVlOGU1Mjk2OGVmXzEuanBn.jpg"
-                    class="d-block w-100" alt="...">
-                <h1 style="margin-top: -50px;">flat 50%off</h1>
-            </div>
-            <div class="carousel-item">
-                <img style="height: 500px; width: 800px ; "
-                    src="https://img.freepik.com/premium-photo/vase-with-flower-hd-8k-wallpaper-stock-photographic-image_890746-116170.jpg"
-                    class="d-block w-100" alt="...">
-                <h1 style="margin-top: -50px;">flat 50%off</h1>
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
     <div class="divv">
         <div style="display: flex; gap: 30px;">
             <div>
@@ -112,9 +80,7 @@
             </div>
         </div>
         <br>
-        <button class="shopbtn">
-            Go to shop
-        </button>
+        <button class="shopbtn"><a href="./collection.html">Go to shop</a></button>
         <!-- footer -->
         <footer>
             <div class="foot-panel1">
