--- a/navbaar/sign.html
+++ b/navbaar/sign.html
@@ -4,19 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="./nav.css">
+    <title>Document</title>
+
 </head>
 
 
 <body>
-
-    <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="./collection.html">Collection</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="./sign.html">Contact</a></li>
-    </ul>
+    <nav>
+        <ul class="nav-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="./collection.html">Collection</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./sign.html">Contact</a></li>
+        </ul>
     </nav>
     <hr>
     <br>
@@ -40,13 +41,13 @@
             </div>
             <br>
             <div class="user-box4">
-            <label for="pass"><b>Password</b></label>
-            <input type="text" placeholder="" name="password" required>
+                <label for="pass"><b>Password</b></label>
+                <input type="text" placeholder="" name="password" required>
             </div>
             <br>
             <div class="user-box5">
-            <label for="cnf pass"><b>Confirm <br>Password</b></label>
-            <input type="text" placeholder="" name="cnf pass" required>
+                <label for="cnf pass"><b>Confirm <br>Password</b></label>
+                <input type="text" placeholder="" name="cnf pass" required>
             </div>
         </form>
         <button class="signinbtn">Signin</button>
