--- a/navbaar/collection.html
+++ b/navbaar/collection.html
@@ -9,12 +9,13 @@
 </head>
 
 <body>
-    <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="./collection.html">Collection</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="./sign.html">Contact</a></li>
-    </ul>
+    <nav>
+        <ul class="nav-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="./collection.html">Collection</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./sign.html">Contact</a></li>
+        </ul>
     </nav>
     <hr>
     <h1 style="color: aliceblue;">Shop for more ....</h1>
@@ -28,8 +29,8 @@
             <h4 style="text-align: center;">price=$23</h4>
             <br>
             <div style="margin-left: 40px;">
-                <button style="padding: 5px; background-color: black; color:white; ">Add to cart</button>
-                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+                <button style="padding: 5px; background-color: black; color:white;cursor: pointer; ">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;cursor: pointer;">Buy now</button>
             </div>
 
         </div>
@@ -42,8 +43,8 @@
             <h4 style="text-align: center;">price=$12</h4>
             <br>
             <div style="margin-left: 40px;">
-                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
-                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+                <button style="padding: 5px; background-color: black; color:white;cursor: pointer;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;cursor: pointer;">Buy now</button>
             </div>
         </div>
 
@@ -56,8 +57,8 @@
             <h4 style="text-align: center;">price=$22</h4>
             <br>
             <div style="margin-left: 40px;">
-                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
-                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+                <button style="padding: 5px; background-color: black; color:white;cursor: pointer;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;cursor: pointer;">Buy now</button>
             </div>
         </div>
     </div>
@@ -71,8 +72,8 @@
             <h4 style="text-align: center;">price=$13</h4>
             <br>
             <div style="margin-left: 40px;">
-                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
-                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+                <button style="padding: 5px; background-color: black; color:white;cursor: pointer;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;cursor: pointer;">Buy now</button>
             </div>
 
         </div>
@@ -85,8 +86,8 @@
             <h4 style="text-align: center;">price=$26</h4>
             <br>
             <div style="margin-left: 40px;">
-                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
-                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+                <button style="padding: 5px; background-color: black; color:white;cursor: pointer;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;cursor: pointer;">Buy now</button>
             </div>
         </div>
 
@@ -99,8 +100,8 @@
             <h4 style="text-align: center;">price=$32</h4>
             <br>
             <div style="margin-left: 40px;">
-                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
-                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+                <button style="padding: 5px; background-color: black; color:white;cursor: pointer;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;cursor: pointer;">Buy now</button>
             </div>
         </div>
     </div>
@@ -114,8 +115,8 @@
             <h4 style="text-align: center;">price=$15</h4>
             <br>
             <div style="margin-left: 40px;">
-                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
-                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+                <button style="padding: 5px; background-color: black; color:white;cursor: pointer;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;cursor: pointer;">Buy now</button>
             </div>
 
         </div>
@@ -128,8 +129,8 @@
             <h4 style="text-align: center;">price=$11</h4>
             <br>
             <div style="margin-left: 40px;">
-                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
-                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+                <button style="padding: 5px; background-color: black; color:white;cursor: pointer;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;cursor: pointer;">Buy now</button>
             </div>
         </div>
 
@@ -142,12 +143,12 @@
             <h4 style="text-align: center;">price=$14</h4>
             <br>
             <div style="margin-left: 40px;">
-                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
-                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+                <button style="padding: 5px; background-color: black; color:white;cursor: pointer;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;cursor: pointer;">Buy now</button>
             </div>
         </div>
     </div>
-      
+
     <div style="display: flex; margin-left: 40px;">
         <div class="product-card">
             <div class="product-tumb">
@@ -157,8 +158,8 @@
             <h4 style="text-align: center;">price=$32</h4>
             <br>
             <div style="margin-left: 40px;">
-                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
-                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+                <button style="padding: 5px; background-color: black; color:white;cursor: pointer;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;cursor: pointer;">Buy now</button>
             </div>
 
         </div>
@@ -171,8 +172,8 @@
             <h4 style="text-align: center;">price=$22</h4>
             <br>
             <div style="margin-left: 40px;">
-                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
-                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+                <button style="padding: 5px; background-color: black; color:white;cursor: pointer;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;cursor: pointer;">Buy now</button>
             </div>
         </div>
 
@@ -185,8 +186,8 @@
             <h4 style="text-align: center;">price=$21</h4>
             <br>
             <div style="margin-left: 40px;">
-                <button style="padding: 5px; background-color: black; color:white;">Add to cart</button>
-                <button style="padding: 5px; background-color: lightcoral; color:black;">Buy now</button>
+                <button style="padding: 5px; background-color: black; color:white;cursor: pointer;">Add to cart</button>
+                <button style="padding: 5px; background-color: lightcoral; color:black;cursor: pointer;">Buy now</button>
             </div>
         </div>
     </div>
