--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -5,15 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- ===== CSS ===== -->
     <link rel="stylesheet" href="./nav.css">
-
     <!-- ===== Boxicons CSS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>wepage</title>
 </head>
 
@@ -31,7 +27,7 @@
         <ul class="nav-links">
             <li><a href="./nav.html">Home</a></li>
             <li><a href="./collection.html">Collection</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="./about.html">About</a></li>
             <li><a href="./sign.html">Contact</a></li>
         </ul>
     </nav>
