--- a/navbaar/nav.html
+++ b/navbaar/nav.html
@@ -33,6 +33,12 @@
     </nav>
     <hr>
     <br>
+    <marquee behaviour="scroll" direction="right" scrollamount="15">
+        <h2 style="color: white;">Exiciting offers upto 50% off on sale</h2>
+    </marquee>
+    <marquee behaviour="scroll" direction="left" scrollamount="15">
+        <h2 style="color: white;">Exiciting offers upto 50% off on sale</h2>
+    </marquee>
     <div class="divv">
         <div style="display: flex; gap: 30px;">
             <div>
@@ -67,17 +73,18 @@
                         </div>
                     </div>
                 </div>
-                <marquee behaviour="scroll" direction="right" scrollamount="15">
+                <!-- <marquee behaviour="scroll" direction="right" scrollamount="15">
                     <h2 style="color: white;">Exiciting offers upto 50% off on sale</h2>
                 </marquee>
                 <marquee behaviour="scroll" direction="left" scrollamount="15">
                     <h2 style="color: white;">Exiciting offers upto 50% off on sale</h2>
-                </marquee>
+                </marquee> -->
             </div>
         </div>
         <br>
         <button class="shopbtn"><a href="./collection.html">Go to shop</a></button>
-        <!-- footer -->
+
+       <!-- =========================footer========================= -->
         <footer>
             <div class="foot-panel1">
             </div>
