--- a/navbaar/sign.html
+++ b/navbaar/sign.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./nav.css">
-    <title>Document</title>
+    <title>wepage</title>
 
 </head>
 
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
+            <li><a href="./nav.html">Home</a></li>
             <li><a href="./collection.html">Collection</a></li>
             <li><a href="./about.html">About</a></li>
             <li><a href="./sign.html">Contact</a></li>
