--- a/navbaar/about.html
+++ b/navbaar/about.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./nav.css">
-    <title>Document</title>
+    <title>wepage</title>
 </head>
 
 <body>
     <nav>
         <ul class="nav-links"></ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="./nav.html">Home</a></li>
         <li><a href="./collection.html">Collection</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./sign.html">Contact</a></li>
@@ -19,6 +19,57 @@
     </nav>
     <hr>
     <h1>About Us</h1>
+     <!-- ==================footer======================== -->
+     <footer>
+        <div class="foot-panel1">
+        </div>
+
+        <div class="foot-panel2">
+            <ul>
+                <p style="font-weight: 700;">Get to Know Us</p>
+                <a>Careers</a>
+                <a>Blog</a>
+            </ul>
+
+            <ul>
+                <p style="font-weight: 700;"> Make Money with Us</p>
+                <a>Sell products </a>
+                <a>Become an Affiliate</a>
+                <a>Self-Publish with Us</a>
+            </ul>
+
+            <ul>
+                <p style="font-weight: 700;">Payment Products</p>
+                <a>Shop with Points</a>
+                <a>Reload Your Balance</a>
+            </ul>
+
+            <ul>
+                <p style="font-weight: 700;">Let Us Help You</p>
+                <a>Your Orders</a>
+                <a>Shipping Rates & Policies</a>
+                <a>Returns & Replacements</a>
+                <a>Manage Your Content</a>
+            </ul>
+
+        </div>
+
+        <div class="foot-panel3">
+            <div class="logo1"></div>
+        </div>
+
+        <div class="foot-panel4">
+            <div class="pages">
+                <a>Condition of User</a>
+                <a>Privacy Notice</a>
+                <a>Your ad Privacy Choices</a>
+            </div>
+            <div class="copy-right">
+                © 2020-2024Inc
+            </div>
+        </div>
+    </footer>
+</div>
 </body>
 
 </html>
