--- a/navbaar/collection.html
+++ b/navbaar/collection.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./nav.css">
-    <title>Document</title>
+    <title>wepage</title>
 </head>
 
 <body>
     <nav>
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
+            <li><a href="./nav.html">Home</a></li>
             <li><a href="./collection.html">Collection</a></li>
             <li><a href="./about.html">About</a></li>
             <li><a href="./sign.html">Contact</a></li>
@@ -191,6 +191,7 @@
             </div>
         </div>
     </div>
+    <!-- =============footer======================== -->
     <footer>
         <div class="foot-panel1">
         </div>
